--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <script src="./script.js">
-    </script>
+
     <header class="header">
         <a href="#" class="logo">Portfolio</a>
         <div class="bx bx-menu" id="menu-icon"></div>
@@ -20,6 +19,7 @@
             <a href="#education">My Journey</a>
             <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
+            <span class="acitve-navbar"></span>
         </nav>
 
     </header>
@@ -42,7 +42,7 @@
         <div class="home-sci">
             <a href="https://github.com/Jayasurya-rookie"><i class='bx bxl-github'></i></a>
             <a href="#"><i class='bx bxl-twitter'></i></i></a>
-            <a href="https://www.linkedin.com/in/jaya-surya-s-448446244"><i class="bx bxl-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/jayasurya-senthilkumar-448446244/"><i class="bx bxl-linkedin"></i></a>
         </div>
         <span class="home-imgHover"></span>
     </section>
@@ -116,7 +116,7 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bxs-music'></i></div>
-                            <h3><a href="">Tune Hub</a></h3>
+                            <h3><a href="https://github.com/Jayasurya-rookie/Project-Tune-Hub">Tune Hub</a></h3>
                             <p> The aim of an Tune hub web application is to
                                 facilitate listening to songs. It includes features such
                                 as premium subscriptions, payment gateway
@@ -128,7 +128,7 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bx-user-circle' ></i></div>
-                            <h3><a href="">Responsive Portfolio Website</a></h3>
+                            <h3><a href="https://github.com/Jayasurya-rookie/Project-Portfolio">Responsive Portfolio Website</a></h3>
                             <p>A responsive portfolio website using HTML, CSS, and JavaScript to showcase skills, projects, and contact details, enhancing personal branding and job prospects
                             </p>
                         </div>
@@ -137,7 +137,7 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bx-question-mark' ></i></div>
-                            <h3><a href="">Quizz App</a></h3>
+                            <h3><a href="https://github.com/Jayasurya-rookie/Quiz-App">Quizz App</a></h3>
                             <p>An interactive MCQ quiz on React.js, built with React, useState, and props. Uses radio buttons for selection and displays the score via an alert prompt on submission..
                             </p>
                         </div>
@@ -161,7 +161,7 @@
                 <div class="skills-box">
                     <div class="skills-content">
                         <div class="progress">
-                            <h3>HTML&CSS <span>90%</span></h3>
+                            <h3>HTML&CSS <span>80%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
@@ -264,7 +264,8 @@
                 <a href="#"><i class='bx bx-up-arrow-alt'></i></a>
             </div>
          </footer>
-
+         <script src="./script.js">
+    </script>
 
 
 </body>
